@@ -1,0 +1,18 @@
+<?xml version='1.0'?>
+<TestDescriptor>
+    <Name>Tests for substitution groups with default namespace</Name>
+    <Author>Werner Guttmann</Author>
+    <Comment>Tests substitution group funtionality</Comment>
+    <Category>basic capability</Category>
+    <SourceGeneratorTest>
+        <Schema>test.xsd</Schema>
+        <Property_File>builder.properties</Property_File>
+        <Root_Object random="false" dump="true">PurchaseOrder</Root_Object>
+        <UnitTestCase>
+			<GenerateImported>true</GenerateImported>
+            <Name>TestPurchaseOrder</Name>
+            <Input>input.xml</Input>
+            <GoldFile/>
+        </UnitTestCase>
+    </SourceGeneratorTest>
+</TestDescriptor>
